--- a/index.html
+++ b/index.html
@@ -10,34 +10,31 @@
 </head>
 
 <body>
-    Здравствуйте, надеюсь, у вас все хорошо!
-    Я понял, что нужно профессиональному веб-разработчику. Я точно в форме, и я ждал такой работы! 
     
-    Я ознакомился с задачей [пара слов о задаче] и готов приступить к качественному выполнению.
+<article> Hello, Hope you are doing well!
+    I'm very interested with the job and
 
-    Стоимость выполнения: [цена указанная заказчиком либо немного ниже средней за подобные заказы]
-    Срок выполнения: [максимально маленький срок на основе опыта]
+ AM:
+- Experienced Front-end Developer with correctly calculate my strength and deliver quality work on time.
+- Front-end web developer with extensive experience in building quality JavaScript websites using various frameworks (Nuxt.js, Vue.js) and web standards
+- Focus on delivering high quality interfaces, performance and structures.
+- Currently engaged in web development. I can create websites or web applications from scratch or update/fix/transform existing ones. I have been working in this direction for 2 years.
+- Ready to learn something new
+- I'm happy to help you and solve your problem!
 
-    Работаю без предоплаты.
+My previous real-world examples:
+https://onemillion.uz
+https://tezbor.uz
+https://uic.group/portfolio
+https://muhammadyusufengineer.github.io/upwork-1-portfolio-maker
 
-    
+and some other stock sites:
+https://zakazlekal.netlify.app
+https://buy-me-a-tea.netlify.app
+https://ayol-uchun.netlify.app
+https://hero-animation-using-gsap.netlify.app
 
-    Похожие примеры работ:
-
-    https://buy-me-a-tea.netlify.app ( HTML ,SCSS )
-    https://admin-dashboard-html-css.netliy.app ( HTML , SCSS )
-    https://onemillion.uz ( HTML ,CSS (Bootstrap) , Vue.js )
-    htts://tezbor.uz ( HTML ,CSS (Bootstrap) , Vue.js )
-
-    Бонус :
-    Дополнительная поддержка в течение 1 месяца в случае ошибок, дефектов или любых изменений
-
-
-    Контакты: 
-        Telegram : https://t.me/imnot_yourfriend
-        Gmail : mrimofficial7@gmail.com
-
-
+    </article>
 </body>
 
 </html>
