--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
     
-<p> Hello, Hope you are doing well! <br>
-    I'm very interested with the job and </p>
+  <pre> 
+  
+        Hello, Hope you are doing well!
+        I'm very interested with the job and
 
- AM:
-    <ul>
-        <li>- Experienced Front-end Developer with correctly calculate my strength and deliver quality work on time.</li>
-        <li>- Front-end web developer with extensive experience in building quality JavaScript websites using various frameworks (Nuxt.js, Vue.js) and web standards</li>
-        <li>- Focus on delivering high quality interfaces, performance and structures.</li>
-        <li>- Currently engaged in web development. I can create websites or web applications from scratch or update/fix/transform existing ones. I have been working in this direction for 2 years.</li>
-        <li>- Ready to learn something new</li>
-        <li>- I'm happy to help you and solve your problem!</li>
-    </ul>
+        - Experienced Front-end Developer with correctly calculate my strength and deliver quality work on time.
+        - Front-end web developer with extensive experience in building quality JavaScript websites using various frameworks (Nuxt.js, Vue.js) and web standards.
+        - Focus on delivering high quality interfaces, performance and structures.
+        - Currently engaged in web development. I can create websites or web applications from scratch or update/fix/transform existing ones. I have been working in this direction for 2 years.
+        - Ready to learn something new.
+        - I'm happy to help you and solve your problem!
 
-    <pre>
+  
         My previous real-world examples:
+        
         https://onemillion.uz
         https://tezbor.uz
         https://uic.group/portfolio
